--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -46,6 +46,10 @@
                 
             </span>
 
+            <span class="square" id="five">
+                
+            </span>
+
         </div>
 
         <div class="elements">
