--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -47,12 +47,18 @@
             </span>
 
             <span class="square" id="five">
-                
+
             </span>
 
         </div>
 
         <div class="elements">
+            <h2>Elements</h2>
+
+            <div>
+                <p>H1</p>
+                <h1 id="headline-one">Headline1</h1>
+            </div>
 
         </div>
 
