Added all elements of Page except for WireFrames

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -6,8 +6,8 @@
 
     <main>
         <header>
-            <h2>Zen Sea Library</h2>
-            <h1>Theme: Sea</h1>
+            <h2 id="headline-one">Zen Sea Library</h2>
+            <h1 id="headline-two">Theme: Sea</h1>
         </header>
 
 
@@ -58,6 +58,35 @@
             <div>
                 <p>H1</p>
                 <h1 id="headline-one">Headline1</h1>
+            </div>
+
+            <div>
+                <p>H2</p>
+                <h2 id="headline-two">Headline2</h2>
+            </div>
+
+            <div>
+                <p>P normal</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit 
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum.</p>
+            </div>
+
+            <div>
+                <p>P Uppercase</p>
+                <p id="p-to-upper">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit 
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum.</p>
             </div>
 
         </div>
