Added in Wireframes

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -91,6 +91,18 @@
 
         </div>
 
+        <div class="wireframes">
+            <p>Small Wireframe</p>
+            <span class="small-wireframe">
+
+            </span>
+
+            <p>Large Wirefram</p>
+            <span class="large-wireframe">
+                
+            </span>
+        </div>
+
         <footer>
 
         </footer>
