--- a/week07/index.html
+++ b/week07/index.html
@@ -1,9 +1,22 @@
-<!DOCTYPE html>
-    <html lang="en-US">
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="test"></div>
-    </body>
+<html>
+  <head>
+    <title>Lesson 04 - Easing</title>
+    <link href="./stylesheets/defaults.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+      <h2>Timing Functions</h2>
+      <h3>linear</h3>
+      <div class="demo linear"></div>
+      <h3>ease-in</h3>
+      <div class="demo ease-in"></div>
+      <h3>ease-out</h3>
+      <div class="demo ease-out"></div>
+      <h3>ease-in-out</h3>
+      <div class="demo ease-in-out"></div>
+      <h3>Cubic-bezier</h3>
+      <div class="demo cubic-bezier"></div>
+      <h3>Steps</h3>
+      <div class="demo steps"></div>
+  </body>
 </html>
