--- a/week08/bootstrap/src/index.html
+++ b/week08/bootstrap/src/index.html
@@ -51,7 +51,13 @@
         </div>
 
         <div class="container">
-            
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="img"></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="./index.js" type="module"></script>
